--- a/29-5-25/Ecom.html
+++ b/29-5-25/Ecom.html
@@ -1,21 +1,31 @@
 <html>
 <head>
 <title>online store</title>
+<style>
+      .myh1{
+
+background-color:pink;
+} 
+     .p{
+background-color:grey;
+}
+</style>
 </head>
 <body>
-<h1 align="center">DRF ECOM PLATFORM<h1>
+<h1 class="myh1" align="center">DRF ECOM PLATFORM<h1>
 <hr> 
 <table align="center">
 <th href="">Home</th>
 <th><a href="Laptops.html">Laptops</a></th>
 <th><a href="Mobiles.html">Mobiles</a></th>
-<th><a href="Watches.html">Watches</th>
+<th><a href="Watches.html">Watches</a></th>
+<th><a href="Login.html">Login</a></th>
 </table>
 <br>
 
 
 
-<p align ="center"><img src="Offers.png"></p>
+<p class="p" align ="center"><img src="Offers.png"></p>
 
 
 </html>
