--- a/29-5-25/Mobiles.html
+++ b/29-5-25/Mobiles.html
@@ -15,9 +15,9 @@
 <h3>MOBILES :<h3>
 <table align="center" >
 <tr>
-<th align="center" cellspacing="30"><img src="iphone.png" height="200"></th>
-<th align="center" cellspacing="30"><img src="s24.png" height="200"></th>
-<th align="center" cellspacing="30"><img src="oneplus.png" height="200"></th>
+<th align="center"><img src="iphone.png" height="200"></th>
+<th align="center"><img src="s24.png" height="200"></th>
+<th align="center"><img src="oneplus.png" height="200"></th>
 </tr>
 <tr>
 <th ><font size="5"> iPhone 15</font></th>
