--- a/29-5-25/Ecom.html
+++ b/29-5-25/Ecom.html
@@ -2,23 +2,24 @@
 <head>
 <title>online store</title>
 <style>
-      .myh1{
 
+.myh1{
 background-color:pink;
 } 
-     .p{
+.p{
 background-color:grey;
 }
+
 </style>
 </head>
 <body>
-<h1 class="myh1" align="center">DRF ECOM PLATFORM<h1>
+<h1 class="myh1" align="center" >DRF ECOM PLATFORM<h1>
 <hr> 
-<table align="center">
-<th href="">Home</th>
+<table align="center" cellspacing="30px">
+<th><a href="">Home</a></th>
 <th><a href="Laptops.html">Laptops</a></th>
 <th><a href="Mobiles.html">Mobiles</a></th>
-<th><a href="Watches.html">Watches</a></th>
+<th><a href="Watches.html">Watches</th>
 <th><a href="Login.html">Login</a></th>
 </table>
 <br>
