--- a/29-5-25/Laptops.html
+++ b/29-5-25/Laptops.html
@@ -5,15 +5,15 @@
 <body>
 <h1 align="center">DRF ECOM PLATFORM<h1>
 <hr> 
-<table align="center">
+<table align="center" cellspacing="30px">
 <th><a href="Ecom.html">Home</a></th>
 <th><a href="Laptops.html">Laptops</a></th>
 <th><a href="Mobiles.html">Mobiles</a></th>
 <th><a href="Watches.html">Watches</th>
 </table>
-<br>
+
 <h3>LAPTOPS :<h3>
-<table align="center">
+<table align="center" cellspacing="20px">
 <tr>
 <th align="center"><img src="asus.png" height="200"></th>
 <th align="center"><img src="acer.png" height="200"></th>
@@ -28,9 +28,9 @@
 <th></th>
 </tr>
 <tr>
-<th>RAM:16gb &nbsp; &nbsp;&nbsp;&nbsp;</th>
-<th>RAM:16gb &nbsp; &nbsp;&nbsp;&nbsp;</th>
-<th>RAM:16gb &nbsp; &nbsp;&nbsp;&nbsp;</th>
+<th>RAM:16gb  &nbsp;&nbsp;&nbsp;</th>
+<th>RAM:16gb  &nbsp;&nbsp;&nbsp;</th>
+<th>RAM:16gb &nbsp;&nbsp;&nbsp;</th>
 </tr>
 <tr>
 <th></th>
