--- a/29-5-25/Mobiles.html
+++ b/29-5-25/Mobiles.html
@@ -5,7 +5,7 @@
 <body>
 <h1 align="center">DRF ECOM PLATFORM<h1>
 <hr> 
-<table align="center">
+<table align="center" cellspacing="30px">
 <th><a href="Ecom.html">Home</a></th>
 <th><a href="Laptops.html">Laptops</a></th>
 <th><a href="Mobiles.html">Mobiles</a></th>
@@ -13,7 +13,7 @@
 </table>
 <br>
 <h3>MOBILES :<h3>
-<table align="center" >
+<table align="center" cellspacing="20px" >
 <tr>
 <th align="center"><img src="iphone.png" height="200"></th>
 <th align="center"><img src="s24.png" height="200"></th>
