--- a/29-5-25/Watches.html
+++ b/29-5-25/Watches.html
@@ -5,15 +5,15 @@
 <body>
 <h1 align="center">DRF ECOM PLATFORM<h1>
 <hr> 
-<table align="center">
+<table align="center" cellspacing="30px">
 <th><a href="Ecom.html">Home</a></th>
 <th><a href="Laptops.html">Laptops</a></th>
 <th><a href="Mobiles.html">Mobiles</a></th>
 <th><a href="Watches.html">Watches</th>
 </table>
 <br>
-<h3>Watches :<h3>
-<table align="center">
+<h3>WATCHES :<h3>
+<table align="center" cellspacing="20px">
 <tr>
 <th align="center"><img src="Apple.png" height="200"></th>
 <th align="center"><img src="Galaxy.png" height="200"></th>
