--- a/4-6-25/nav.html
+++ b/4-6-25/nav.html
@@ -132,7 +132,7 @@ hr{
             <li class="listitem"><a class="aa" href=""><button><b>HOME</b> </button></a></li>
             <li class="listitem"><a class="aa" href=""><button><b>ABOUT US</b> </button></a></li>
             <li class="listitem"><a class="aa" href=""><button><b>DEPARTMENTS</b></button></a></li>
-            <li class="dropdown"><a class="aa" href=""><button><b>ACADEMICS</b></button></button> </a>
+            <li class="dropdown"><a class="aa" href=""><button><b>ACADEMICS</b></button> </a>
             <ul class="dropdown1">
                 <br>
             <li><a class="lis">COURSES OFFERED</a></li>
